(tmux) add nerdfont glyphs

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -35,8 +35,24 @@ bind t new-window -c "#{pane_current_path}"
 # split panes horizontally/vertically using the current pane's directory as the new pane's directory
 bind '|' split-window -h -c '#{pane_current_path}'
 bind '-' split-window -v -c '#{pane_current_path}'
+
+# Border characters for statusbar indicators
+if-shell -F "$NERDFONT_ENABLE" {
+    set -g @left_symbol "\ue0b6"
+    set -g @right_symbol "\ue0b4"
+} {
+    set -g @left_symbol "█"
+    set -g @right_symbol "█"
+}
+
 # reload
-bind r run-shell -b 'tmux source ~/.tmux.conf\; set @mode_indicator_custom_mode_style "bg=#{@bgcolor},fg=#{@standoutcolor},bold,reverse"\; set @mode_indicator_custom_prompt " RELOADED "\; refresh-client -S; sleep 1; tmux set -u @mode_indicator_custom_prompt\; set -u @mode_indicator_custom_mode_style\; refresh-client -S'
+if-shell -F "$NERDFONT_ENABLE" {
+    set -g @reload_symbol "\ue348 "
+} {
+    set -g @reload_symbol "⟳"
+}
+bind r run-shell -b 'tmux source ~/.tmux.conf\; set @mode_indicator_custom_prompt "#[bold bg=#{@bgcolor} fg=#{@standoutcolor}]#{@left_symbol}#[reverse]#{@reload_symbol} RELOADED#[noreverse]#{@right_symbol}"\; refresh-client -S; sleep 1; tmux set -u @mode_indicator_custom_prompt\; refresh-client -S'
+
 # navigate windows
 bind-key -n M-H previous-window
 bind-key -n M-L next-window
@@ -79,13 +95,14 @@ bind-key -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
 # }}}
 
 # Aesthetics {{{
-# status bar configuration
-set -g status-position bottom
-set -g pane-border-status bottom
 set -g @activecolor 'cyan'
 set -g @bordercolor 'colour8'
 set -g @standoutcolor 'yellow'
 set -g @bgcolor 'terminal'
+
+# status bar configuration
+set -g status-position bottom
+set -g pane-border-status bottom
 
 # Panes
 set -g pane-border-lines single
@@ -103,11 +120,22 @@ set -g message-style "bg=#{@bgcolor},fg=#{@standoutcolor}"
 set -g status-interval 1
 set -g status on
 set -g status-style "bg=#{@bgcolor},fg=#{@bordercolor}"
-set -g status-right "#{?#{m/r:tty[0-9]*,#{client_tty}},#[fg=terminal] %a#, %b %-e %H:%M#{?#{battery_percentage}, #[fg=colour8]|#[fg=terminal] #[fg=colour3]⌁#[fg=terminal]#{battery_percentage},} #[fg=colour8]|#{?#{==:#{online_status},online},#[fg=colour4] 🜃 #[fg=terminal]online,#[fg=colour1] 🜃 #[fg=terminal]offline},#[bg=terminal,fg=terminal,bold] ＋#[bg=terminal,fg=colour0]} "
-bind-key -T root MouseDown1StatusRight new-window -c "#{pane_current_path}"
-set -g status-left-length 999
+
+if-shell -F "$NERDFONT_ENABLE" {
+    set -g @internet_connected_symbol "\uf1eb "
+    set -g @internet_disconnected_symbol "\uf1eb "
+    set -g @new_window_symbol "\uf067 "
+} {
+    set -g @internet_connected_symbol "🜃 "
+    set -g @internet_disconnected_symbol "🜃 "
+    set -g @new_window_symbol "＋"
+}
+set -g status-right "#{?#{m/r:tty[0-9]*,#{client_tty}},#{?#{battery_percentage},#{battery_color_status_fg}#{battery_icon_status} #{battery_color_charge_fg}#{battery_icon_charge}#[fg=terminal] #{battery_percentage}#[fg=colour3],} #{online_status}  #[fg=colour8]│#[fg=terminal] %a#, %b %-e %H:%M,#[bg=terminal,fg=terminal,bold] #{@new_window_symbol}#[bg=terminal,fg=colour0]} "
 set -g status-right-length 999
+bind-key -T root MouseDown1StatusRight new-window -c "#{pane_current_path}"
+
 set -g status-left "#[bg=#{@bgcolor},fg=terminal] #S #{tmux_mode_indicator}"
+set -g status-left-length 999
 
 # Windows
 set -g status-justify absolute-centre
@@ -137,28 +165,62 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set-option -g @plugin 'b0o/tmux-autoreload'
 
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'
-    set -g @mode_indicator_prefix_prompt ' PREFIX '
-    set -g @mode_indicator_prefix_mode_style 'bg=#{@bgcolor},fg=#{@standoutcolor},bold,reverse'
-    set -g @mode_indicator_copy_prompt ' COPY '
-    set -g @mode_indicator_copy_mode_style 'bg=#{@bgcolor},fg=#{@standoutcolor},bold,reverse'
-    set -g @mode_indicator_sync_prompt ' SYNC '
-    set -g @mode_indicator_sync_mode_style 'bg=#{@bgcolor},fg=#{@standoutcolor},bold,reverse'
-    set -g @mode_indicator_empty_prompt ' '
-    set -g @mode_indicator_empty_mode_style 'bg=#{@bgcolor}'
+    if-shell -F "$NERDFONT_ENABLE" {
+        set -g @prefix_symbol "\uf80b "
+        set -g @copy_symbol "\uf68e "
+        set -g @sync_symbol "\uf46a "
+    } {
+        set -g @prefix_symbol "🖮 "
+        set -g @copy_symbol "©"
+        set -g @sync_symbol "🗇 "
+    }
+    set -g @mode_indicator_prefix_prompt "#[bold bg=#{@bgcolor} fg=#{@standoutcolor}]#{@left_symbol}#[reverse]#{@prefix_symbol} PREFIX#[noreverse]#{@right_symbol}"
+    set -g @mode_indicator_copy_prompt "#[bold bg=#{@bgcolor} fg=#{@standoutcolor}]#{@left_symbol}#[reverse]#{@copy_symbol} COPY#[noreverse]#{@right_symbol}"
+    set -g @mode_indicator_sync_prompt "#[bold bg=#{@bgcolor} fg=#{@standoutcolor}]#{@left_symbol}#[reverse]#{@sync_symbol} SYNC#[noreverse]#{@right_symbol}"
+    set -g @mode_indicator_empty_prompt '#[bg=#{@bgcolor}] '
 
 set -g @plugin 'MunifTanjim/tmux-suspend'
+    if-shell -F "$NERDFONT_ENABLE" {
+        set -g @suspended_symbol "\uf80e "
+    } {
+        set -g @suspended_symbol "🖮 "
+    }
     set -g @suspend_key 'M-z'
     set -g @suspend_suspended_options " \
-        @mode_indicator_custom_prompt:: SUSPENDED , \
-        @mode_indicator_custom_mode_style::bg=#{@bgcolor}\\,fg=#{@standoutcolor}\\,bold\\,reverse, \
+        @mode_indicator_custom_prompt::#[bold bg=#{@bgcolor} fg=#{@standoutcolor}]#{@left_symbol}#[reverse]#{@suspended_symbol} PASSTHROUGH#[noreverse]#{@right_symbol}, \
         pane-active-border-style::fg=#{@standoutcolor}, \
     "
 
 set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @batt_color_charge_primary_tier8 'colour2'
+set -g @batt_color_charge_primary_tier7 'colour2'
+set -g @batt_color_charge_primary_tier6 'colour2'
+set -g @batt_color_charge_primary_tier5 'colour11'
+set -g @batt_color_charge_primary_tier4 'colour11'
+set -g @batt_color_charge_primary_tier3 'colour1'
+set -g @batt_color_charge_primary_tier2 'colour1'
+set -g @batt_color_charge_primary_tier1 'colour1'
+set -g @batt_color_status_primary_charged 'colour2'
+set -g @batt_color_status_primary_charging 'colour3'
+set -g @batt_color_status_primary_unknown 'terminal'
+if-shell -F "$NERDFONT_ENABLE" {
+    set -g @batt_icon_status_discharging " "
+    set -g @batt_icon_status_charging "\uf0e7"
+    set -g @batt_icon_status_charged "\uf0e7"
+    set -g @batt_icon_status_unknown "\uf0e7\uf128 "
+    set -g @batt_icon_charge_tier8 "\uf581"
+    set -g @batt_icon_charge_tier7 "\uf580"
+    set -g @batt_icon_charge_tier6 "\uf57f"
+    set -g @batt_icon_charge_tier5 "\uf57e"
+    set -g @batt_icon_charge_tier4 "\uf57d"
+    set -g @batt_icon_charge_tier3 "\uf57b"
+    set -g @batt_icon_charge_tier2 "\uf57a"
+    set -g @batt_icon_charge_tier1 "\uf586"
+}
 
 set -g @plugin 'tmux-plugins/tmux-online-status'
-    set -g @online_icon "online"
-    set -g @offline_icon "offline"
+    set -g @online_icon "#[fg=colour4] \uf1eb"
+    set -g @offline_icon "#[fg=colour1] \uf1eb"
 
 # Uses tmux-resurrect to continuously save the current tmux session at a specified interval.
 # NOTE: continuum must be the last plugin listed: https://github.com/tmux-plugins/tmux-continuum#known-issues
