--- a/fontconfig/local.conf
+++ b/fontconfig/local.conf
@@ -26,6 +26,9 @@
     </prefer>
 </alias>
 
+<!--
+    Whenever Source Code Pro (SCP) is requested, use SCP Medium instead. The regular SCP is a little too thin for me.
+-->
 <match>
     <test name="family">
         <string>Source Code Pro</string>
