--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -59,6 +59,7 @@
     ~/.config/pipx/pipx-packages: pipx/pipx-packages
     ~/.local/bin/delta-with-fallback-to-less: git/delta-with-fallback-to-less
     ~/.config/viddy.toml: viddy/viddy.toml
+    ~/.dotfiles/.git/hooks/post-merge: install/update_tools.sh
 
 # Using another link directive since I have multiple links to this directory and you can't have
 # multiple keys with the same name in YAML
