(tmux) statusline tweaks

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -124,13 +124,13 @@ set -g status-style "bg=#{@bgcolor},fg=#{@bordercolor}"
 if-shell -F "$NERDFONT_ENABLE" {
     set -g @internet_connected_symbol "\uf1eb "
     set -g @internet_disconnected_symbol "\uf1eb "
-    set -g @new_window_symbol "\uf067 "
+    set -g @new_window_symbol "\uf44d "
 } {
     set -g @internet_connected_symbol "🜃 "
     set -g @internet_disconnected_symbol "🜃 "
     set -g @new_window_symbol "＋"
 }
-set -g status-right "#{?#{m/r:tty[0-9]*,#{client_tty}},#{?#{battery_percentage},#{battery_color_status_fg}#{battery_icon_status} #{battery_color_charge_fg}#{battery_icon_charge}#[fg=terminal] #{battery_percentage}#[fg=colour3],} #{online_status}  #[fg=colour8]│#[fg=terminal] %a#, %b %-e %H:%M,#[bg=terminal,fg=terminal,bold] #{@new_window_symbol}#[bg=terminal,fg=colour0]} "
+set -g status-right "#{?#{m/r:tty[0-9]*,#{client_tty}},#{?#{battery_percentage},#{battery_color_charge_fg}#{battery_icon_charge}#{battery_color_status_fg}#{battery_icon_status}#[fg=terminal] #{battery_percentage}#[fg=colour3],} #{online_status}  #[fg=colour8]│#[fg=terminal] %a#, %b %-e %H:%M,#[bg=terminal,fg=terminal,bold] #{@new_window_symbol}#[bg=terminal,fg=colour0]} "
 set -g status-right-length 999
 bind-key -T root MouseDown1StatusRight new-window -c "#{pane_current_path}"
 
