--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -88,10 +88,10 @@ bind -n M-t if-shell -F '#{==:#{session_name},popup}' {
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n M-h if-shell "$is_vim" 'send-keys M-h'  'select-pane -L'
-bind-key -n M-j if-shell "$is_vim" 'send-keys M-j'  'select-pane -D'
-bind-key -n M-k if-shell "$is_vim" 'send-keys M-k'  'select-pane -U'
-bind-key -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
+bind-key -n M-h if-shell "$is_vim" 'send-keys M-h'  'select-pane -L -Z'
+bind-key -n M-j if-shell "$is_vim" 'send-keys M-j'  'select-pane -D -Z'
+bind-key -n M-k if-shell "$is_vim" 'send-keys M-k'  'select-pane -U -Z'
+bind-key -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R -Z'
 # }}}
 
 # Aesthetics {{{
