--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -92,6 +92,9 @@ bind-key -n M-h if-shell "$is_vim" 'send-keys M-h'  'select-pane -L -Z'
 bind-key -n M-j if-shell "$is_vim" 'send-keys M-j'  'select-pane -D -Z'
 bind-key -n M-k if-shell "$is_vim" 'send-keys M-k'  'select-pane -U -Z'
 bind-key -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R -Z'
+
+# Enable hyperlinks
+set -ga terminal-features "*:hyperlinks"
 # }}}
 
 # Aesthetics {{{
