(kitty) click links without having to hold any modifiers

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -62,6 +62,9 @@ map mod+c copy_and_clear_or_interrupt
 
 map mod+v paste_from_clipboard
 
+mouse_map left click ungrabbed,grabbed mouse_handle_click selection link prompt
+click_interval 0.1
+
 # load colorscheme
 include current-theme.conf
 
