(kitty) no window close confirmation

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -65,6 +65,8 @@ map mod+v paste_from_clipboard
 mouse_map left click ungrabbed,grabbed mouse_handle_click selection link prompt
 click_interval 0.1
 
+confirm_os_window_close 0
+
 # load colorscheme
 include current-theme.conf
 
