(kitty) give text under the cursor the color of the background

--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -13,6 +13,8 @@ selection_background #eee8d5
 url_color #cb4b16
 # Should match foreground
 cursor #52676f
+# Should match background
+cursor_text_color #fdf6e3
 
 # Blacks
 ########################################
