--- a/kitty/night-theme.conf
+++ b/kitty/night-theme.conf
@@ -13,6 +13,8 @@ selection_background #2e3440
 url_color #0087BD
 # Should match foreground
 cursor #D8DEE9
+# Should match background
+cursor_text_color #D8DEE9
 
 # Blacks
 ########################################
