(tmux) add keybind for choosing a session

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -35,6 +35,7 @@ bind t new-window -c "#{pane_current_path}"
 # split panes horizontally/vertically using the current pane's directory as the new pane's directory
 bind '|' split-window -h -c '#{pane_current_path}'
 bind '-' split-window -v -c '#{pane_current_path}'
+bind-key -n M-s choose-tree -Zs
 
 # Border characters for statusbar indicators
 if-shell -F "$NERDFONT_ENABLE" {
