--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -62,8 +62,8 @@ map mod+c copy_and_clear_or_interrupt
 
 map mod+v paste_from_clipboard
 
-mouse_map left click ungrabbed,grabbed mouse_handle_click selection link prompt
-click_interval 0.1
+# left click opens a url immediately after it is released
+mouse_map left release grabbed,ungrabbed mouse_handle_click selection link
 
 confirm_os_window_close 0
 
