(kitty) move underlines down so I can see underscores

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -67,6 +67,9 @@ mouse_map left release grabbed,ungrabbed mouse_handle_click selection link
 
 confirm_os_window_close 0
 
+# So I can see underscores in underlined text
+modify_font underline_position 2
+
 # load colorscheme
 include current-theme.conf
 
