--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,7 +3,7 @@ bold_font        Source Code Pro Bold
 italic_font      Source Code Pro Medium Italic
 bold_italic_font Source Code Pro Bold Italic
 
-#: Use nerd font symbols for the following code points.
+# Use nerd font symbols for the following code points.
 symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0C8,U+E0CA,U+E0CC-U+E0D2,U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E62F,U+E700-U+E7C5,U+F000-U+F2E0,U+F300-U+F31C,U+F400-U+F4A9,U+F500-U+F8FF Symbols Nerd Font Mono
 
 font_size 12
@@ -11,53 +11,53 @@ font_size 12
 modify_font cell_width 104%
 modify_font cell_height 125%
 
-#: Don't render ligatures when the cursor is over them.
-#:
-#: NOTE: This refers to programming ligatures, typically implemented using the calt OpenType feature.
-#: For disabling general ligatures, use the font_features setting.
+# Don't render ligatures when the cursor is over them.
+#
+# NOTE: This refers to programming ligatures, typically implemented using the calt OpenType feature.
+# For disabling general ligatures, use the font_features setting.
 disable_ligatures cursor
 
-#: Hide mouse cursor after the specified number of seconds of the
-#: mouse not being used. Set to zero to disable mouse cursor hiding.
-#: Set to a negative value to hide the mouse cursor immediately when
-#: typing text. Disabled by default on macOS as getting it to work
-#: robustly with the ever-changing sea of bugs that is Cocoa is too
-#: much effort.
+# Hide mouse cursor after the specified number of seconds of the
+# mouse not being used. Set to zero to disable mouse cursor hiding.
+# Set to a negative value to hide the mouse cursor immediately when
+# typing text. Disabled by default on macOS as getting it to work
+# robustly with the ever-changing sea of bugs that is Cocoa is too
+# much effort.
 mouse_hide_wait 0
 
-#: Copy to clipboard on select.
-#:
-#: Note that copying to the clipboard is a security risk, as all
-#: programs, including websites open in your browser can read the
-#: contents of the system clipboard.
+# Copy to clipboard on select.
+#
+# Note that copying to the clipboard is a security risk, as all
+# programs, including websites open in your browser can read the
+# contents of the system clipboard.
 copy_on_select clipboard
 
 enable_audio_bell no
 
-#: The window padding (in pts) (blank area between the text and the
-#: window border). A single value sets all four sides. Two values set
-#: the vertical and horizontal sides. Three values set top, horizontal
-#: and bottom. Four values set top, right, bottom and left.
+# The window padding (in pts) (blank area between the text and the
+# window border). A single value sets all four sides. Two values set
+# the vertical and horizontal sides. Three values set top, horizontal
+# and bottom. Four values set top, right, bottom and left.
 window_padding_width 6 0 6 0
 
-#: Hide the window decorations (title-bar and window borders).
-#: NOTE: the effects of changing this setting when reloading config are undefined.
+# Hide the window decorations (title-bar and window borders).
+# NOTE: the effects of changing this setting when reloading config are undefined.
 hide_window_decorations yes
 
 background_opacity 1
 
-#: Allow changing of the background_opacity dynamically by changing this setting and reloading the config.
+# Allow changing of the background_opacity dynamically by changing this setting and reloading the config.
 dynamic_background_opacity yes
 
-#: How much to dim text that has the DIM/FAINT attribute set. One
-#: means no dimming and zero means fully dimmed (i.e. invisible).
+# How much to dim text that has the DIM/FAINT attribute set. One
+# means no dimming and zero means fully dimmed (i.e. invisible).
 dim_opacity 0.7
 
-#: Use the background color of the currently active window as background color for the kitty window titlebar.
+# Use the background color of the currently active window as background color for the kitty window titlebar.
 wayland_titlebar_color background
 
-#: Copy and clear the selection or send an interrupt if there is
-#: no selection.
+# Copy and clear the selection or send an interrupt if there is
+# no selection.
 map mod+c copy_and_clear_or_interrupt
 
 map mod+v paste_from_clipboard
