--- a/kitty/night-theme.conf
+++ b/kitty/night-theme.conf
@@ -14,7 +14,7 @@ url_color #0087BD
 # Should match foreground
 cursor #D8DEE9
 # Should match background
-cursor_text_color #D8DEE9
+cursor_text_color #232731
 
 # Blacks
 ########################################
