--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -88,3 +88,6 @@
     -
         description: Install pipx tools
         command: xargs -I PACKAGE pipx install PACKAGE < "$pipx_packages"
+    -
+        description: Link apt configs
+        command: fish ./apt/install.fish
