--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -82,7 +82,7 @@ bind-key -n M-9 select-window -t 9
 bind -n M-t if-shell -F '#{==:#{session_name},popup}' {
    detach-client
 } {
-   display-popup -E -d '#{pane_current_path}' -w100% -h100% -- "tmux attach -t popup || tmux new -s popup"
+   display-popup -EB -d '#{pane_current_path}' -w100% -h100% -- "tmux attach -t popup || tmux new -s popup"
 }
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
