fix: replace non-existent variable with file path

--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -87,7 +87,7 @@
         command: asdf install
     -
         description: Install pipx tools
-        command: xargs -I PACKAGE pipx install PACKAGE < "$pipx_packages"
+        command: xargs -I PACKAGE pipx install PACKAGE < "pipx/pipx-packages"
     -
         description: Link apt configs
         command: fish ./apt/install.fish
