(kitty) fix: typo

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -58,9 +58,9 @@ wayland_titlebar_color background
 
 # Copy and clear the selection or send an interrupt if there is
 # no selection.
-map mod+c copy_and_clear_or_interrupt
+map kitty_mod+c copy_and_clear_or_interrupt
 
-map mod+v paste_from_clipboard
+map kitty_mod+v paste_from_clipboard
 
 # left click opens a url immediately after it is released
 mouse_map left release grabbed,ungrabbed mouse_handle_click selection link
