(tmux) statusline redesign
- Better window names
- Add volume indicator
- Change battery indicator
- Move things around

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,6 +9,8 @@ set -g default-terminal "tmux-256color"
 set-option -g allow-rename off
 # Let tmux automatically rename windows, unless I manually set a name for that window
 set -g automatic-rename on
+# current command and its arguments or the path if the current command is the shell
+set-option -g automatic-rename-format "#(ps -f --no-headers --ppid $(tmux display-message -p #{pane_pid}) | awk '{ print substr($0, index($0,$8)) }' | ifne -n pwd | sed \"s#$HOME#~#\" |  awk '{ print substr($0, length($0) - 10) }' ) "
 set-option -g renumber-windows on
 bind-key -n MouseDrag1Status swap-window -d -t=
 setw -g aggressive-resize on
@@ -109,7 +111,7 @@ set -g pane-border-status bottom
 
 # Panes
 set -g pane-border-lines single
-set -g pane-active-border-style "fg=terminal,dim"
+set -g pane-active-border-style "fg=colour15,dim"
 set -g pane-border-style "fg=#{@bordercolor}"
 
 # Clock Mode
@@ -133,18 +135,20 @@ if-shell -F "$NERDFONT_ENABLE" {
     set -g @internet_disconnected_symbol "🜃 "
     set -g @new_window_symbol "＋"
 }
-set -g status-right "#{?#{m/r:tty[0-9]*,#{client_tty}},#{?#{battery_percentage},#{battery_color_charge_fg}#{battery_icon_charge}#{battery_color_status_fg}#{battery_icon_status}#[fg=terminal] #{battery_percentage}#[fg=colour3],} #{online_status}  #[fg=colour8]│#[fg=terminal] %a#, %b %-e %H:%M,#[bg=terminal,fg=terminal,bold] #[bg=terminal,fg=colour15]#{@new_window_symbol}#[bg=terminal,fg=colour0]} "
-set -g status-right-length 999
+set -g status-justify centre
+set -g window-status-format ''
+set -g window-status-current-format ''
+set -g @superscript_number "python -c \"import sys; index = int(sys.argv[1]); superscript_numbers = ['¹', '²', '³', '⁴', '⁵', '⁶', '⁷', '⁸', '⁹']; print(superscript_numbers[index - 1] if index <= 9 else '⁺')\""
+set -g @window-status-format "#[range=window|#{window_index}]#[fg=colour15]#(#{@superscript_number} #I) #W"
+set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=colour6]#(#{@superscript_number} #I)#[fg=terminal] #W#{?window_zoomed_flag,#[fg=#{@standoutcolor}#,nounderscore] [MAX],}#[nounderscore]"
+set -g status-left "#{?#{m/r:tty[0-9]*,#{client_tty}},#[range=left] #[bg=#{@bgcolor}#,fg=terminal]#S#[fg=colour8] │,}#{W: #{E:@window-status-format} , #{E:@window-status-current-format} } #[range=right]#[bg=terminal,fg=colour15]#{@new_window_symbol}  #{tmux_mode_indicator}"
+
+set -g status-left-length 999
 bind-key -T root MouseDown1StatusRight new-window -c "#{pane_current_path}"
 
-set -g status-left "#[bg=#{@bgcolor},fg=terminal] #S #{tmux_mode_indicator}"
-set -g status-left-length 999
-
-# Windows
-set -g status-justify absolute-centre
-set -g window-status-format "#[fg=colour15] #I #W "
-set -g window-status-current-format " #[fg=colour6]#I#[fg=terminal] #W#{?window_zoomed_flag,#[fg=#{@standoutcolor}#,nounderscore] [MAX],}#[nounderscore] "
-set -g window-status-separator "#[bg=terminal,fg=colour8]  "
+set -g @battery_icon "python -c \"import sys; print([['\uf579','\uf57a','\uf57b','\uf57d','\uf57e','\uf57f','\uf580','\uf581'], ['\uf585','\uf585','\uf586','\uf587','\uf588','\uf589','\uf58a','\uf584'], ['\uf590'] * 8][int(sys.argv[1])][int(sys.argv[2])] + ' ');\""
+set -g status-right "#{?#{m/r:tty[0-9]*,#{client_tty}},#{online_status}  #{?#{volume_percentage},#[fg=terminal]\uf028 #(~/.tmux/plugins/tmux-plugin-volume/scripts/volume_percentage.sh)%,} #{?#{battery_percentage}, #{?#{==:#{battery_icon_status},1},#{battery_color_status_fg},#{battery_color_charge_fg}}#(#{@battery_icon} \"$(~/.tmux/plugins/tmux-battery/scripts/battery_icon_status.sh)\" \"$(~/.tmux/plugins/tmux-battery/scripts/battery_icon_charge.sh)\")#[fg=terminal]#{battery_percentage},}#[fg=colour8] │ #[fg=terminal]%a#, %b %-e %H:%M,#[range=left] #[bg=#{@bgcolor},fg=terminal]#S} "
+set -g status-right-length 999
 
 set -g popup-border-lines heavy
 set -g popup-border-style "fg=#{@bordercolor}"
@@ -195,35 +199,36 @@ set -g @plugin 'MunifTanjim/tmux-suspend'
     "
 
 set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @batt_color_charge_primary_tier8 'colour2'
-set -g @batt_color_charge_primary_tier7 'colour2'
-set -g @batt_color_charge_primary_tier6 'colour2'
-set -g @batt_color_charge_primary_tier5 'colour11'
-set -g @batt_color_charge_primary_tier4 'colour11'
-set -g @batt_color_charge_primary_tier3 'colour1'
-set -g @batt_color_charge_primary_tier2 'colour1'
-set -g @batt_color_charge_primary_tier1 'colour1'
-set -g @batt_color_status_primary_charged 'colour2'
-set -g @batt_color_status_primary_charging 'colour3'
-set -g @batt_color_status_primary_unknown 'terminal'
-if-shell -F "$NERDFONT_ENABLE" {
-    set -g @batt_icon_status_discharging " "
-    set -g @batt_icon_status_charging "\uf0e7"
-    set -g @batt_icon_status_charged "\uf0e7"
-    set -g @batt_icon_status_unknown "\uf0e7\uf128 "
-    set -g @batt_icon_charge_tier8 "\uf581"
-    set -g @batt_icon_charge_tier7 "\uf580"
-    set -g @batt_icon_charge_tier6 "\uf57f"
-    set -g @batt_icon_charge_tier5 "\uf57e"
-    set -g @batt_icon_charge_tier4 "\uf57d"
-    set -g @batt_icon_charge_tier3 "\uf57b"
-    set -g @batt_icon_charge_tier2 "\uf57a"
-    set -g @batt_icon_charge_tier1 "\uf586"
-}
+    set -g @batt_color_charge_primary_tier8 'terminal'
+    set -g @batt_color_charge_primary_tier7 'terminal'
+    set -g @batt_color_charge_primary_tier6 'terminal'
+    set -g @batt_color_charge_primary_tier5 'terminal'
+    set -g @batt_color_charge_primary_tier4 'terminal'
+    set -g @batt_color_charge_primary_tier3 'terminal'
+    set -g @batt_color_charge_primary_tier2 'colour1'
+    set -g @batt_color_charge_primary_tier1 'colour1'
+    set -g @batt_color_status_primary_charged 'colour2'
+    set -g @batt_color_status_primary_charging 'colour3'
+    set -g @batt_color_status_primary_unknown '0'
+    set -g @batt_color_status_primary_discharging '0'
+    set -g @batt_icon_status_discharging "0"
+    set -g @batt_icon_status_charging "1"
+    set -g @batt_icon_status_charged "1"
+    set -g @batt_icon_status_unknown "2"
+    set -g @batt_icon_charge_tier8 "7"
+    set -g @batt_icon_charge_tier7 "6"
+    set -g @batt_icon_charge_tier6 "5"
+    set -g @batt_icon_charge_tier5 "4"
+    set -g @batt_icon_charge_tier4 "3"
+    set -g @batt_icon_charge_tier3 "2"
+    set -g @batt_icon_charge_tier2 "1"
+    set -g @batt_icon_charge_tier1 "0"
 
 set -g @plugin 'tmux-plugins/tmux-online-status'
-    set -g @online_icon "#[fg=colour4] \uf1eb"
-    set -g @offline_icon "#[fg=colour1] \uf1eb"
+    set -g @online_icon "#[fg=colour4] #{@internet_connected_symbol}"
+    set -g @offline_icon "#[fg=colour1] #{@internet_disconnected_symbol}"
+
+set -g @plugin 'levex/tmux-plugin-volume'
 
 # Uses tmux-resurrect to continuously save the current tmux session at a specified interval.
 # NOTE: continuum must be the last plugin listed: https://github.com/tmux-plugins/tmux-continuum#known-issues
