--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -79,6 +79,7 @@ bind-key -n M-6 select-window -t 6
 bind-key -n M-7 select-window -t 7
 bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
+bind-key -T root MouseDown1StatusRight new-window -c "#{pane_current_path}"
 
 # popup
 bind -n M-t if-shell -F '#{==:#{session_name},popup}' {
@@ -126,28 +127,45 @@ set -g status-interval 1
 set -g status on
 set -g status-style "bg=#{@bgcolor},fg=#{@bordercolor}"
 
+# Remove the window status. I'll add it to the statusbar manually
+set -g status-justify centre
+set -g window-status-format ''
+set -g window-status-current-format ''
+
 if-shell -F "$NERDFONT_ENABLE" {
     set -g @internet_connected_symbol "\uf1eb "
     set -g @internet_disconnected_symbol "\uf1eb "
-    set -g @new_window_symbol "\uf055 "
+    set -g @new_window_symbol "\uf44d "
 } {
     set -g @internet_connected_symbol "🜃 "
     set -g @internet_disconnected_symbol "🜃 "
     set -g @new_window_symbol "＋"
 }
-set -g status-justify centre
-set -g window-status-format ''
-set -g window-status-current-format ''
 set -g @superscript_number "python -c \"import sys; index = int(sys.argv[1]); superscript_numbers = ['¹', '²', '³', '⁴', '⁵', '⁶', '⁷', '⁸', '⁹']; print(superscript_numbers[index - 1] if index <= 9 else '⁺')\""
 set -g @window-status-format "#[range=window|#{window_index}]#[fg=colour15]#(#{@superscript_number} #I) #W"
 set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=colour6]#(#{@superscript_number} #I)#[fg=terminal] #W#{?window_zoomed_flag,#[fg=#{@standoutcolor}#,nounderscore] [MAX],}#[nounderscore]"
-set -g status-left "#{?#{m/r:tty[0-9]*,#{client_tty}},#[range=left] #[bg=#{@bgcolor}#,fg=terminal]#S#[fg=colour8] │,}#{W: #{E:@window-status-format} , #{E:@window-status-current-format} } #[range=right]#[bg=terminal,fg=colour15]#{@new_window_symbol}  #{tmux_mode_indicator}"
-
+set -g @window-info-format "#{W: #{E:@window-status-format} , #{E:@window-status-current-format} } #[range=right]#[bg=terminal,fg=colour15]#{@new_window_symbol}"
+set -g status-left "#{E:@window-info-format}  #{tmux_mode_indicator}"
 set -g status-left-length 999
-bind-key -T root MouseDown1StatusRight new-window -c "#{pane_current_path}"
 
-set -g @battery_icon "python -c \"import sys; print([['\uf579','\uf57a','\uf57b','\uf57d','\uf57e','\uf57f','\uf580','\uf581'], ['\uf585','\uf585','\uf586','\uf587','\uf588','\uf589','\uf58a','\uf584'], ['\uf590'] * 8][int(sys.argv[1])][int(sys.argv[2])] + ' ');\""
-set -g status-right "#{?#{m/r:tty[0-9]*,#{client_tty}},#{online_status}  #{?#{volume_percentage},#[fg=terminal]\uf028 #(~/.tmux/plugins/tmux-plugin-volume/scripts/volume_percentage.sh)%,} #{?#{battery_percentage}, #{?#{==:#{battery_icon_status},1},#{battery_color_status_fg},#{battery_color_charge_fg}}#(#{@battery_icon} \"$(~/.tmux/plugins/tmux-battery/scripts/battery_icon_status.sh)\" \"$(~/.tmux/plugins/tmux-battery/scripts/battery_icon_charge.sh)\")#[fg=terminal]#{battery_percentage},}#[fg=colour8] │ #[fg=terminal]%a#, %b %-e %H:%M,#[range=left] #[bg=#{@bgcolor},fg=terminal]#S} "
+if-shell -F "$NERDFONT_ENABLE" {
+    set -g @volume_symbol "\uf028 "
+} {
+    set -g @volume_symbol "🔊"
+}
+set -g @volume-format "#{?#(~/.tmux/plugins/tmux-plugin-volume/scripts/volume_percentage.sh),#[fg=terminal]#{@volume_symbol}#(~/.tmux/plugins/tmux-plugin-volume/scripts/volume_percentage.sh)%,}"
+if-shell -F "$NERDFONT_ENABLE" {
+    set -g @battery_icon "python -c \"import sys; print([['\uf579','\uf57a','\uf57b','\uf57d','\uf57e','\uf57f','\uf580','\uf581'], ['\uf585','\uf585','\uf586','\uf587','\uf588','\uf589','\uf58a','\uf584'], ['\uf590'] * 8][int(sys.argv[1])][int(sys.argv[2])] + ' ');\""
+} {
+    set -g @battery_icon "python -c \"import sys; print(([['🔋'] * 8] * 3)[int(sys.argv[1])][int(sys.argv[2])] + ' ');\""
+}
+set -g @battery-format "#{?#(~/.tmux/plugins/tmux-battery/scripts/battery_percentage.sh), #{?#{==:#{battery_icon_status},1},#{battery_color_status_fg},#{battery_color_charge_fg}}#(#{@battery_icon} \"$(~/.tmux/plugins/tmux-battery/scripts/battery_icon_status.sh)\" \"$(~/.tmux/plugins/tmux-battery/scripts/battery_icon_charge.sh)\")#[fg=terminal]#(~/.tmux/plugins/tmux-battery/scripts/battery_percentage.sh),}"
+set -g @separator-format "#[fg=colour8]│"
+set -g @datetime-format "#[fg=terminal]%a#, %b %-e %H:%M"
+set -g @extra-info-format "#{online_status}  #{E:@volume-format} #{E:@battery-format} #{E:@separator-format} #{E:@datetime-format} #{E:@separator-format} "
+set -g @tty-info-format "#{?#{m/r:pts[0-9]*,#{client_tty}},#{E:@extra-info-format},}"
+set -g @session-format "#[range=left]#[bg=#{@bgcolor},fg=terminal]#S"
+set -g status-right "#{E:@tty-info-format}#{E:@session-format} "
 set -g status-right-length 999
 
 set -g popup-border-lines heavy
