(tmux) fix typo

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -169,7 +169,7 @@ set -g @battery-format "#{?#(~/.tmux/plugins/tmux-battery/scripts/battery_percen
 set -g @separator-format "#[fg=colour8]│"
 set -g @datetime-format "#[fg=terminal]%a#, %b %-e %H:%M"
 set -g @extra-info-format "#{online_status}  #{E:@volume-format} #{E:@battery-format} #{E:@separator-format} #{E:@datetime-format} #{E:@separator-format} "
-set -g @tty-info-format "#{?#{m/r:pts[0-9]*,#{client_tty}},#{E:@extra-info-format},}"
+set -g @tty-info-format "#{?#{m/r:tty[0-9]*,#{client_tty}},#{E:@extra-info-format},}"
 set -g @session-format "#[range=left]#[bg=#{@bgcolor},fg=terminal]#S"
 set -g status-right "#{E:@tty-info-format}#{E:@session-format} "
 set -g status-right-length 999
