--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -107,7 +107,6 @@ bind-key    -T root         M-MouseDown3Pane      display-menu -O -T "#[align=ce
 # }}}
 
 # Aesthetics {{{
-set -g @activecolor 'cyan'
 set -g @bordercolor 'colour8'
 set -g @standoutcolor 'yellow'
 set -g @bgcolor 'terminal'
@@ -131,17 +130,16 @@ set -g message-style "bg=#{@bgcolor},fg=#{@standoutcolor}"
 # Bars
 set -g status-interval 1
 set -g status on
-set -g status-style "bg=#{@bgcolor},fg=#{@bordercolor}"
+set -g status-style "bg=#{@bgcolor},fg=terminal,push-default"
 
 # Remove the window status. I'll add it to the statusbar manually
-set -g status-justify centre
 set -g window-status-format ''
 set -g window-status-current-format ''
 
 if-shell -F "$NERDFONT_ENABLE" {
     set -g @internet_connected_symbol "\uf1eb "
     set -g @internet_disconnected_symbol "\uf1eb "
-    set -g @new_window_symbol "\uf44d "
+    set -g @new_window_symbol "＋"
 } {
     set -g @internet_connected_symbol "🜃 "
     set -g @internet_disconnected_symbol "🜃 "
@@ -150,7 +148,7 @@ if-shell -F "$NERDFONT_ENABLE" {
 set -g @superscript_number "python -c \"import sys; index = int(sys.argv[1]); superscript_numbers = ['¹', '²', '³', '⁴', '⁵', '⁶', '⁷', '⁸', '⁹']; print(superscript_numbers[index - 1] if index <= 9 else '⁺')\""
 set -g @window-status-format "#[range=window|#{window_index}]#[fg=colour15]#(#{@superscript_number} #I) #W"
 set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=colour6]#(#{@superscript_number} #I)#[fg=terminal] #W#{?window_zoomed_flag,#[fg=#{@standoutcolor}#,nounderscore] [MAX],}#[nounderscore]"
-set -g @window-info-format "#{W: #{E:@window-status-format} , #{E:@window-status-current-format} } #[range=right]#[bg=terminal,fg=colour15]#{@new_window_symbol}"
+set -g @window-info-format "#{W: #{E:@window-status-format} , #{E:@window-status-current-format} }#[range=right] #[fg=colour15]#{@new_window_symbol} "
 set -g status-left "#{E:@window-info-format}  #{tmux_mode_indicator}"
 set -g status-left-length 999
 
@@ -159,18 +157,29 @@ if-shell -F "$NERDFONT_ENABLE" {
 } {
     set -g @volume_symbol "🔊"
 }
-set -g @volume-format "#{?#(~/.tmux/plugins/tmux-plugin-volume/scripts/volume_percentage.sh),#[fg=terminal]#{@volume_symbol}#(~/.tmux/plugins/tmux-plugin-volume/scripts/volume_percentage.sh)%,}"
+set -g @volume-percentage "#(~/.tmux/plugins/tmux-plugin-volume/scripts/volume_percentage.sh)"
+set -g @volume-format "#[fg=default]#{?#{E:@volume-percentage},#{@volume_symbol}#{E:@volume-percentage}%,}"
 if-shell -F "$NERDFONT_ENABLE" {
-    set -g @battery_icon "python -c \"import sys; print([['\uf579','\uf57a','\uf57b','\uf57d','\uf57e','\uf57f','\uf580','\uf581'], ['\uf585','\uf585','\uf586','\uf587','\uf588','\uf589','\uf58a','\uf584'], ['\uf590'] * 8][int(sys.argv[1])][int(sys.argv[2])] + ' ');\""
+    set -g @get_battery_icon "python -c \"import sys; print([['\uf579','\uf57a','\uf57b','\uf57d','\uf57e','\uf57f','\uf580','\uf581'], ['\uf585','\uf585','\uf586','\uf587','\uf588','\uf589','\uf58a','\uf584'], ['\uf590'] * 8][int(sys.argv[1])][int(sys.argv[2])] + ' ');\""
 } {
-    set -g @battery_icon "python -c \"import sys; print(([['🔋'] * 8] * 3)[int(sys.argv[1])][int(sys.argv[2])] + ' ');\""
+    set -g @get_battery_icon "python -c \"import sys; print(([['🔋'] * 8] * 3)[int(sys.argv[1])][int(sys.argv[2])] + ' ');\""
 }
-set -g @battery-format "#{?#(~/.tmux/plugins/tmux-battery/scripts/battery_percentage.sh), #{?#{==:#{battery_icon_status},1},#{battery_color_status_fg},#{battery_color_charge_fg}}#(#{@battery_icon} \"$(~/.tmux/plugins/tmux-battery/scripts/battery_icon_status.sh)\" \"$(~/.tmux/plugins/tmux-battery/scripts/battery_icon_charge.sh)\")#[fg=terminal]#(~/.tmux/plugins/tmux-battery/scripts/battery_percentage.sh),}"
+set -g @battery-percentage "#[fg=default]#(~/.tmux/plugins/tmux-battery/scripts/battery_percentage.sh)"
+set -g @battery-status-script "~/.tmux/plugins/tmux-battery/scripts/battery_icon_status.sh"
+set -g @battery-status "#(#{@battery-status-script})"
+set -g @battery-charge-script "~/.tmux/plugins/tmux-battery/scripts/battery_icon_charge.sh"
+set -g @battery-charge "#(#{@battery-charge-script})"
+set -g @battery-status-fg "#(~/.tmux/plugins/tmux-battery/scripts/battery_color_status.sh fg)"
+set -g @battery-charge-fg "#(~/.tmux/plugins/tmux-battery/scripts/battery_color_charge.sh fg)"
+set -g @battery-icon-color "#{?#{==:#{E:@battery-status},1},#{E:@battery-status-fg},#{E:@battery-charge-fg}}"
+set -g @battery-icon "#{E:@battery-icon-color}#(#{@get_battery_icon} \"$(#{@battery-status-script})\" \"$(#{@battery-charge-script})\")"
+set -g @battery-format "#{?#{E:@battery-percentage}, #{E:@battery-icon}#{E:@battery-percentage},}"
 set -g @separator-format "#[fg=colour8]│"
-set -g @datetime-format "#[fg=terminal]%a#, %b %-e %H:%M"
-set -g @extra-info-format "#{online_status}  #{E:@volume-format} #{E:@battery-format} #{E:@separator-format} #{E:@datetime-format} #{E:@separator-format} "
+set -g @datetime-format "#[fg=default]%a, %b %-e %H:%M"
+set -g @online-format "#(~/.tmux/plugins/tmux-online-status/scripts/online_status_icon.sh)"
+set -g @extra-info-format "#{E:@online-format}  #{E:@volume-format} #{E:@battery-format} #{E:@separator-format} #{E:@datetime-format} #{E:@separator-format} "
 set -g @tty-info-format "#{?#{m/r:tty[0-9]*,#{client_tty}},#{E:@extra-info-format},}"
-set -g @session-format "#[range=left]#[bg=#{@bgcolor},fg=terminal]#S"
+set -g @session-format "#[range=left]#[bg=default,fg=default]#S"
 set -g status-right "#{E:@tty-info-format}#{E:@session-format} "
 set -g status-right-length 999
 
@@ -205,10 +214,10 @@ set -g @plugin 'MunifTanjim/tmux-mode-indicator'
         set -g @copy_symbol "©"
         set -g @sync_symbol "🗇 "
     }
-    set -g @mode_indicator_prefix_prompt "#[bold bg=#{@bgcolor} fg=#{@standoutcolor}]#{@left_symbol}#[reverse]#{@prefix_symbol} PREFIX#[noreverse]#{@right_symbol}"
-    set -g @mode_indicator_copy_prompt "#[bold bg=#{@bgcolor} fg=#{@standoutcolor}]#{@left_symbol}#[reverse]#{@copy_symbol} COPY#[noreverse]#{@right_symbol}"
-    set -g @mode_indicator_sync_prompt "#[bold bg=#{@bgcolor} fg=#{@standoutcolor}]#{@left_symbol}#[reverse]#{@sync_symbol} SYNC#[noreverse]#{@right_symbol}"
-    set -g @mode_indicator_empty_prompt '#[bg=#{@bgcolor}] '
+    set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=#{@standoutcolor}]#{@left_symbol}#[reverse]#{@prefix_symbol} PREFIX#[noreverse]#{@right_symbol}"
+    set -g @mode_indicator_copy_prompt "#[bold bg=default fg=#{@standoutcolor}]#{@left_symbol}#[reverse]#{@copy_symbol} COPY#[noreverse]#{@right_symbol}"
+    set -g @mode_indicator_sync_prompt "#[bold bg=default fg=#{@standoutcolor}]#{@left_symbol}#[reverse]#{@sync_symbol} SYNC#[noreverse]#{@right_symbol}"
+    set -g @mode_indicator_empty_prompt '#[bg=default] '
 
 set -g @plugin 'MunifTanjim/tmux-suspend'
     if-shell -F "$NERDFONT_ENABLE" {
@@ -218,17 +227,17 @@ set -g @plugin 'MunifTanjim/tmux-suspend'
     }
     set -g @suspend_key 'M-z'
     set -g @suspend_suspended_options " \
-        @mode_indicator_custom_prompt::#[bold bg=#{@bgcolor} fg=#{@standoutcolor}]#{@left_symbol}#[reverse]#{@suspended_symbol} PASSTHROUGH#[noreverse]#{@right_symbol}, \
+        @mode_indicator_custom_prompt::#[bold bg=default fg=#{@standoutcolor}]#{@left_symbol}#[reverse]#{@suspended_symbol} PASSTHROUGH#[noreverse]#{@right_symbol}, \
         pane-active-border-style::fg=#{@standoutcolor}, \
     "
 
 set -g @plugin 'tmux-plugins/tmux-battery'
-    set -g @batt_color_charge_primary_tier8 'terminal'
-    set -g @batt_color_charge_primary_tier7 'terminal'
-    set -g @batt_color_charge_primary_tier6 'terminal'
-    set -g @batt_color_charge_primary_tier5 'terminal'
-    set -g @batt_color_charge_primary_tier4 'terminal'
-    set -g @batt_color_charge_primary_tier3 'terminal'
+    set -g @batt_color_charge_primary_tier8 'default'
+    set -g @batt_color_charge_primary_tier7 'default'
+    set -g @batt_color_charge_primary_tier6 'default'
+    set -g @batt_color_charge_primary_tier5 'default'
+    set -g @batt_color_charge_primary_tier4 'default'
+    set -g @batt_color_charge_primary_tier3 'default'
     set -g @batt_color_charge_primary_tier2 'colour1'
     set -g @batt_color_charge_primary_tier1 'colour1'
     set -g @batt_color_status_primary_charged 'colour2'
