--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -158,7 +158,7 @@ if-shell -F "$NERDFONT_ENABLE" {
     set -g @volume_symbol "🔊"
 }
 set -g @volume-percentage "#(~/.tmux/plugins/tmux-plugin-volume/scripts/volume_percentage.sh)"
-set -g @volume-format "#[fg=default]#{?#{E:@volume-percentage},#{@volume_symbol}#{E:@volume-percentage}%,}"
+set -g @volume-tray-icon "#[fg=default]#{?#{E:@volume-percentage},#{@volume_symbol}#{E:@volume-percentage}%,}"
 if-shell -F "$NERDFONT_ENABLE" {
     set -g @get_battery_icon "python -c \"import sys; print([['\uf579','\uf57a','\uf57b','\uf57d','\uf57e','\uf57f','\uf580','\uf581'], ['\uf585','\uf585','\uf586','\uf587','\uf588','\uf589','\uf58a','\uf584'], ['\uf590'] * 8][int(sys.argv[1])][int(sys.argv[2])] + ' ');\""
 } {
@@ -173,14 +173,14 @@ set -g @battery-status-fg "#(~/.tmux/plugins/tmux-battery/scripts/battery_color_
 set -g @battery-charge-fg "#(~/.tmux/plugins/tmux-battery/scripts/battery_color_charge.sh fg)"
 set -g @battery-icon-color "#{?#{==:#{E:@battery-status},1},#{E:@battery-status-fg},#{E:@battery-charge-fg}}"
 set -g @battery-icon "#{E:@battery-icon-color}#(#{@get_battery_icon} \"$(#{@battery-status-script})\" \"$(#{@battery-charge-script})\")"
-set -g @battery-format "#{?#{E:@battery-percentage}, #{E:@battery-icon}#{E:@battery-percentage},}"
-set -g @separator-format "#[fg=colour8]│"
-set -g @datetime-format "#[fg=default]%a, %b %-e %H:%M"
-set -g @online-format "#(~/.tmux/plugins/tmux-online-status/scripts/online_status_icon.sh)"
-set -g @extra-info-format "#{E:@online-format}  #{E:@volume-format} #{E:@battery-format} #{E:@separator-format} #{E:@datetime-format} #{E:@separator-format} "
-set -g @tty-info-format "#{?#{m/r:tty[0-9]*,#{client_tty}},#{E:@extra-info-format},}"
-set -g @session-format "#[range=left]#[bg=default,fg=default]#S"
-set -g status-right "#{E:@tty-info-format}#{E:@session-format} "
+set -g @battery-tray-icon "#{?#{E:@battery-percentage}, #{E:@battery-icon}#{E:@battery-percentage},}"
+set -g @separator "#[fg=colour8]│"
+set -g @datetime "#[fg=default]%a, %b %-e %H:%M"
+set -g @online-tray-icon "#(~/.tmux/plugins/tmux-online-status/scripts/online_status_icon.sh)"
+set -g @tray-icons "#{E:@online-tray-icon}  #{E:@volume-tray-icon} #{E:@battery-tray-icon}"
+set -g @tty-info "#{?#{m/r:tty[0-9]*,#{client_tty}},#{E:@tray-icons} #{E:@separator} #{E:@datetime} #{E:@separator} ,}"
+set -g @session "#[range=left]#[bg=default,fg=default]#S"
+set -g status-right "#{E:@tty-info}#{E:@session} "
 set -g status-right-length 999
 
 set -g popup-border-lines heavy
