(kitty) tweak day theme

--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -27,7 +27,7 @@ color16 #fbedca
 # Darker than color0 -- folded lines
 color24 #fcf1d5
 # Floats
-color32 #efead9
+color32 #E4DCC7
 
 # Reds
 ########################################
