--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -30,7 +30,7 @@ set-hook -g client-active attach-session
 set-option -g allow-passthrough on
 # The output from ':checkhealth' in neovim says 'autoread' might not work if this isn't set.
 set-option -g focus-events on
-set-option -g set-clipboard external
+set -g set-clipboard on
 
 # Create a new window using the current pane's directory as the new window's directory
 bind t new-window -c "#{pane_current_path}"
@@ -98,6 +98,13 @@ bind-key -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R -Z'
 
 # Enable hyperlinks
 set -ga terminal-features "*:hyperlinks"
+
+# Clipboard copying
+set -ga terminal-features "*:clipboard"
+# TODO: I might not need this if tmux's default copy command works when tmux is being run remotely
+if-shell "command -v osc-copy" {
+    set -g copy-command "osc-copy"
+}
 
 # Context menus stay up after releasing the mouse
 bind-key    -T root         MouseDown3Pane        if-shell -F -t = "#{||:#{mouse_any_flag},#{&&:#{pane_in_mode},#{?#{m/r:(copy|view)-mode,#{pane_mode}},0,1}$}}" { select-pane -t = ; send-keys -M } { display-menu -O -T "#[align=centre]#{pane_index} (#{pane_id})" -t = -x M -y M "#{?#{m/r:(copy|view)-mode,#{pane_mode}},Go To Top,}" < { send-keys -X history-top } "#{?#{m/r:(copy|view)-mode,#{pane_mode}},Go To Bottom,}" > { send-keys -X history-bottom } '' "#{?mouse_word,Search For #[underscore]#{=/9/...:mouse_word},}" C-r { if-shell -F "#{?#{m/r:(copy|view)-mode,#{pane_mode}},0,1}" "copy-mode -t=" ; send-keys -X -t = search-backward "#{q:mouse_word}" } "#{?mouse_word,Type #[underscore]#{=/9/...:mouse_word},}" C-y { copy-mode -q ; send-keys -l "#{q:mouse_word}" } "#{?mouse_word,Copy #[underscore]#{=/9/...:mouse_word},}" c { copy-mode -q ; set-buffer "#{q:mouse_word}" } "#{?mouse_line,Copy Line,}" l { copy-mode -q ; set-buffer "#{q:mouse_line}" } '' "#{?mouse_hyperlink,Type #[underscore]#{=/9/...:mouse_hyperlink},}" C-h { copy-mode -q ; send-keys -l "#{q:mouse_hyperlink}" } "#{?mouse_hyperlink,Copy #[underscore]#{=/9/...:mouse_hyperlink},}" h { copy-mode -q ; set-buffer "#{q:mouse_hyperlink}" } '' "Horizontal Split" h { split-window -h } "Vertical Split" v { split-window -v } '' "#{?#{>:#{window_panes},1},,-}Swap Up" u { swap-pane -U } "#{?#{>:#{window_panes},1},,-}Swap Down" d { swap-pane -D } "#{?pane_marked_set,,-}Swap Marked" s { swap-pane } '' Kill X { kill-pane } Respawn R { respawn-pane -k } "#{?pane_marked,Unmark,Mark}" m { select-pane -m } "#{?#{>:#{window_panes},1},,-}#{?window_zoomed_flag,Unzoom,Zoom}" z { resize-pane -Z } }
