--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -81,12 +81,13 @@ bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
 bind-key -T root MouseDown1StatusRight new-window -c "#{pane_current_path}"
 
-# popup
-bind -n M-t if-shell -F '#{==:#{session_name},popup}' {
-   detach-client
+# scratchpad session
+bind -n M-t if-shell -F '#{==:#{session_name},scratch}' {
+    switch-client -p
 } {
-   display-popup -EB -d '#{pane_current_path}' -w100% -h100% -- "tmux attach -t popup || tmux new -s popup"
+    new-session -A -c '#{pane_current_path}' -s scratch 
 }
+
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
