(tmux) change passthrough indicator style

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -237,8 +237,10 @@ set -g @plugin 'MunifTanjim/tmux-suspend'
     }
     set -g @suspend_key 'M-z'
     set -g @suspend_suspended_options " \
-        @mode_indicator_custom_prompt::#[bold bg=default fg=#{@standoutcolor}]#{@left_symbol}#[reverse]#{@suspended_symbol} PASSTHROUGH#[noreverse]#{@right_symbol}, \
-        pane-active-border-style::fg=#{@standoutcolor}, \
+        pane-active-border-style::fg=#{@standoutcolor} dim, \
+        pane-border-style::fg=#{@bordercolor} dim, \
+        @mode_indicator_custom_prompt::#[italics bg=default fg=#{@standoutcolor} align=centre]#{@suspended_symbol} passthrough, \
+        status-style::dim, \
     "
 
 set -g @plugin 'tmux-plugins/tmux-battery'
