(kitty) open a link after a click
Doing it on 'release' was causing an issue in tmux where selected text would only be copied to the clipboard if I clicked the left mouse button after selecting text. Even though it should copy after I release the left button.

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -63,7 +63,11 @@ map kitty_mod+c copy_and_clear_or_interrupt
 map kitty_mod+v paste_from_clipboard
 
 # left click opens a url immediately after it is released
-mouse_map left release grabbed,ungrabbed mouse_handle_click selection link
+#
+# TODO: find a way to remove the click_interval entirely. Someone asked on this issue:
+# https://github.com/kovidgoyal/kitty/issues/4083#issuecomment-939245159
+mouse_map left click grabbed,ungrabbed mouse_handle_click selection link
+click_interval 0.25
 
 confirm_os_window_close 0
 
