(fish) switch from gio to trash-cli
I was getting some weird autocomplete suggestions from gio.

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -33,6 +33,7 @@ brew "shellcheck"
 brew "subversion"
 brew "tealdeer"
 brew "tmux", args: ["HEAD"]
+brew "trash-cli"
 brew "tree"
 brew "viddy"
 brew "watchman"
