(fish) print banner on startup

--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -61,6 +61,7 @@
     ~/.config/viddy.toml: viddy/viddy.toml
     ~/.dotfiles/.git/hooks/post-merge: install/update_tools.sh
     ~/.markdownlint.jsonc: markdownlint/markdownlint.jsonc
+    ~/.local/share/figlet/smblock.tlf: figlet/smblock.tlf
 
 # Using another link directive since I have multiple links to this directory and you can't have
 # multiple keys with the same name in YAML
