(upgrade) check for new kitty versions

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -80,3 +80,6 @@ include current-theme.conf
 # TODO: Prompt marking breaks my prompt for some reason so I'm disabling it for now, but
 # I should figure out the issue. Would be nice to see last output in less. I think transient prompt is breaking that.
 shell_integration disabled no-prompt-mark
+
+# Disable check for updates. I do that as part of a larger upgrade script.
+update_check_interval 0
