click to open urls that span multiple lines in tmux and neovim

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -66,7 +66,7 @@ map kitty_mod+v paste_from_clipboard
 #
 # TODO: find a way to remove the click_interval entirely. Someone asked on this issue:
 # https://github.com/kovidgoyal/kitty/issues/4083#issuecomment-939245159
-mouse_map left click grabbed,ungrabbed mouse_handle_click selection link
+mouse_map left click ungrabbed mouse_handle_click selection link
 click_interval 0.25
 
 confirm_os_window_close 0
