(firefox) add firefox desktop entry
The only change from the default entry is the addition of the --ProfileManager flag to the 'Exec' command.
This way it always asks me to choose a profile

--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -62,6 +62,7 @@
     ~/.dotfiles/.git/hooks/post-merge: install/update_tools.sh
     ~/.markdownlint.jsonc: markdownlint/markdownlint.jsonc
     ~/.local/share/figlet/smblock.tlf: figlet/smblock.tlf
+    ~/.local/share/applications/firefox.desktop: firefox/firefox.desktop
 
 # Using another link directive since I have multiple links to this directory and you can't have
 # multiple keys with the same name in YAML
