--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -63,6 +63,7 @@
     ~/.markdownlint.jsonc: markdownlint/markdownlint.jsonc
     ~/.local/share/figlet/smblock.tlf: figlet/smblock.tlf
     ~/.local/share/applications/firefox.desktop: firefox/firefox.desktop
+    ~/.local/share/applications/code.desktop: vscode/code.desktop
 
 # Using another link directive since I have multiple links to this directory and you can't have
 # multiple keys with the same name in YAML
